2008-03-25  John W. Eaton  <jwe@octave.org>

	* lo-mappers.cc (xtrunc): New function.
	* lo-mappers.h: Provide decl.

2008-03-25  Jaroslav Hajek  <highegg@gmail.com>

	* lo-mappers.cc (xroundb): New function.
	* lo-mappers.h: Provide decl.

2008-03-23  David Bateman  <dbateman@free.fr>

	* mx-ops: Definite binary operators for mixed integer array +
	array case, except for 64bit cases.
	
2008-03-21  David Bateman  <dbateman@free.fr>

	* oct-sparse.h: Add headers for amd.h.

2008-03-20  David Bateman  <dbateman@free.fr>

	* Array.cc (Array<T> Array<T>::diag (octave_idx_type) const): New
	method for diag function.
	* Array.h  (Array<T> diag (octave_idx_type) const): Declare it.
	* Array2.h (Array2<T> diag (octave_idx_type) const): New method.
	* MArray2.h (MArray2<T> diag (octave_idx_type) const): ditto.
	* ArrayN.h (ArrayN<T> diag (octave_idx_type) const): ditto.
	* MArrayN.h (MArrayN<T> diag (octave_idx_type) const): ditto.

	* Sparse.cc (Sparse<T> Sparse<T>::diag (octave_idx_type) const):
	New method for the diag function.
	* Sparse.h  (Sparse<T> diag (octave_idx_type) const): Declare it.
	* MSparse.h (MSparse<T> diag (octave_idx_type) const): New method.

	* Range.cc (Matrix Range::diag (octave_idx_type) const):
	New method for the diag function.
	* Range.h  (Matrix diag (octave_idx_type) const): Declare it.
	
	* CDiagMatrix.cc (ComplexColumnVector ComplexDiagMatrix::diag
	(void) const): delete.
	* dDiagMatrix.cc (ColumnVector DiagMatrix::diag (void) const): delete.
	* dDiagMatrix.h (ColumnVector diag (void) const): ditto.
	* CMatrix.cc (ComplexColumnVector ComplexMatrix::diag (void) const):
	delete.
	* CMatrix.h (ComplexColumnVector diag (void) const): ditto.
	* dMatrix.cc (ColumnVector Matrix::diag (void) const): ditto.
	* dMatrix.h (ColumnVector diag (void) const): ditto.
	* boolMatrix.cc (boolMatrix boolMatrix::diag (void) const): ditto.
	* boolMatrix.h (boolMatrix diag (void) const): ditto.
	* chMatrix.cc (charMatrix charMatrix::diag (void) const): ditto.